changed the ratios of the game on mobile that there is no longer a greay bar

--- a/styles/portfoliogame.module.css
+++ b/styles/portfoliogame.module.css
@@ -43,7 +43,8 @@
   }
   
   .game {
-    max-width: 100%;
+    height: 100vw;
+    width: 100vw;
   }
 
   .titleContainer p {
